# zero2prod

./: Cargo.toml  Dockerfile  README.md  fly.toml  sqlx-data.json
.github/workflows/: audit-on-push.yml  deploy.yml  general.yml  scheduled-audit.yml
configuration/: base.yaml  production.yaml
migrations/: 20230110202109_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
