[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13"

[dev-dependencies]
reqwest = "0.11"

[dependencies.sqlx]
version = "0.6"
features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "chrono",
    "migrate"
]